# haskell-OpenGL-examples

./: .gitignore  .travis.yml  LICENSE  README.md  default.nix  haskell-OpenGL-examples.cabal  shell.nix  stack.yaml
glfw/: Direct.hs  Modern.hs
red-book-1-1/: GLUtil.hs  Modern.hs  ModernRaw.hs  triangles.cpp  triangles.frag  triangles.vert
red-book-1-1/modern/: Main.hs
shaders/: triangle.f.glsl
src/Util/: GLFW.hs  Shaders.hs
triangle/: Direct.hs  Modern.hs  README.md
triangle/direct/: Main.hs
wiki-intro/: Makefile  Modern.hs  triangle.cpp
wikibook/tutorial-01-intro/: GLUtil.hs  Modern.hs  README.md  triangle.cpp
wikibook/tutorial-02-vbo/: README.md  VBO.hs  Vector.hs  triangle.f.glsl
wikibook/tutorial-03-attributes/: Interleaved.hs  Linear.hs  Separate.hs  triangle.f.glsl  triangle.v.glsl
wikibook/tutorial-04-matrices/: Linear.hs
wikibook/tutorial-05-3D/: Cube.hs  GLUtil.hs  README.md  TH.hs  Vinyl.hs  cube.f.glsl  cube.v.glsl
