name:                haskell-OpenGL-examples
version:             0.1.0.0
synopsis:            Comparative examples of OpenGL in Haskell
description:         These are the examples I wish I had when I started learning OpenGL.  There are more examples in the wild of the deprecated pre-3.0 API than of modern OpenGL, and of course all examples are in C.  The usual assortment of GLUT and other windowing frameworks doesn't help.  These examples (will eventually) cover several different choices of Haskell wrapper over OpenGL---basic OpenGL package, the GLUtil package, and the vinyl-gl package.
homepage:            http://github.com/bergey/haskell-OpenGL-examples
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey <bergey@teallabs.org>
maintainer:          Daniel Bergey <bergey@teallabs.org>
copyright:           2013 Daniel Bergey
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable wiki-t1-modern
  main-is:             wikibook/tutorial-01-intro/Modern.hs
  hs-source-dirs:      src, .
  other-modules:       Util.GLFW
  build-depends:       base >= 4 && < 5,
                       GLFW-b == 1.*,
                       OpenGL >= 2.8 && < 2.11,
                       vector >= 0.9 && < 0.11,
                       bytestring >= 0.10 && < 0.11
  ghc-options:         -O2 -Wall

executable wiki-t2-vector
  main-is:            wikibook/tutorial-02-vbo/Vector.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      vector >= 0.9 && < 0.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7 && < 0.9,
                      filepath >= 1.3
  ghc-options:        -O2 -Wall

executable wiki-t2-vbo
  main-is:            wikibook/tutorial-02-vbo/VBO.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7 && < 0.9,
                      filepath >= 1.3
  ghc-options:        -O2 -Wall

executable wiki-t3-separate
  main-is:            wikibook/tutorial-03-attributes/Separate.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7 && < 0.9,
                      filepath >= 1.3
  ghc-options:        -O2 -Wall

executable wiki-t3-interleaved
  main-is:            wikibook/tutorial-03-attributes/Interleaved.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7 && < 0.9,
                      filepath >= 1.3
  ghc-options:        -O2 -Wall

executable wiki-t3-linear
  main-is:            wikibook/tutorial-03-attributes/Linear.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7 && < 0.9,
                      filepath >= 1.3 && < 1.4,
                      linear >= 1.3 && < 1.17
  ghc-options:        -O2 -Wall

executable wiki-t4-linear
  main-is:            wikibook/tutorial-04-matrices/Linear.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7 && < 0.9,
                      filepath >= 1.3 && < 1.4,
                      linear >= 1.3 && < 1.17
  ghc-options:        -O2 -Wall

executable wiki-t5-glutil
  main-is:            wikibook/tutorial-05-3D/GLUtil.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7 && < 0.9,
                      filepath >= 1.3 && < 1.4,
                      linear >= 1.3 && < 1.17,
                      distributive >= 0.3 && < 0.5
  ghc-options:        -O2 -Wall

executable wiki-t5-vinyl
  main-is:            wikibook/tutorial-05-3D/Vinyl.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7 && < 0.9,
                      filepath >= 1.3 && < 1.4,
                      linear >= 1.3 && < 1.17,
                      distributive >= 0.3 && < 0.5,
                      vinyl-gl >= 0.3 && < 0.4,
                      vinyl >= 0.5.1 && < 0.6,
                      singletons >= 1.0 && < 1.2
  ghc-options:        -O2 -Wall

executable wiki-t5-th
  main-is:            wikibook/tutorial-05-3D/TH.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6,
                      GLUtil >= 0.7.4 && < 0.9,
                      filepath >= 1.3 && < 1.4,
                      linear >= 1.3 && < 1.17,
                      distributive >= 0.3 && < 0.5,
                      vinyl-gl >= 0.3 && < 0.4,
                      vinyl >= 0.5.1 && < 0.6,
                      file-embed < 0.1
  ghc-options:        -O2 -Wall

executable glfw-direct
  main-is:            glfw/Direct.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11
  ghc-options:        -O2 -Wall


executable glfw-modern
  main-is:            glfw/Modern.hs
  hs-source-dirs:     src, .
  other-modules:      Util.GLFW, Util.Shaders
  build-depends:      base >= 4 && < 5,
                      GLFW-b == 1.*,
                      OpenGL >= 2.8 && < 2.11,
                      vector >= 0.9 && < 0.11,
                      bytestring >= 0.10 && < 0.11,
                      OpenGLRaw >= 1.4 && < 1.6
  ghc-options:        -O2 -Wall
